--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,21 @@ remote_theme: just-the-docs/just-the-docs
 
 # Configure your sidebar navigation
 just_the_docs:
-  # Specify the order and grouping of your pages in the navigation sidebar
   nav_order: 1
-  # Optionally control the hierarchy and pages that appear
   nav:
     - Home: docs/index.md
     - Getting Started: docs/getting-started.md
     - Advanced Features: docs/advanced-features.md
-    - Conditions: docs/conditions.md
+    - Conditions:
+        - url: docs/conditions.md
+          children:
+            - title: "IF"
+              url: docs/conditions.md#if
+            - title: "IF NOT"
+              url: docs/conditions.md#if-not
+            - title: "IF THEN ELSE"
+              url: docs/conditions.md#if-then-else
+            - title: "Nested IF Blocks"
+              url: docs/conditions.md#nested-if-blocks
+            - title: "Notes on IF THEN Blocks"
+              url: docs/conditions.md#notes-on-if-then-blocks
